# prox

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/adhan/: CMakeLists.txt  adhan.c
components/adhan/include/: adhan.h
components/espu8g2/: CMakeLists.txt  fetch_u8g2_csrc.ps1  u8g2_esp32_hal.c
components/espu8g2/include/: u8g2_esp32_hal.h
components/openweather/: CMakeLists.txt  openweather.c
components/openweather/include/: openweather.h
components/wifi_manager/: CMakeLists.txt  wifi_manager.c
components/wifi_manager/include/: wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  page.h  page_adhan.c  page_adhan.h  page_home.c  page_home.h  page_weather.c  page_weather.h  prox.c
